versions/GNDS-v2.0/GNDS/c/src/v2.0/top/PoPs.h

// --- Const-aware handles.
typedef const struct PoPsClass *const ConstHandle2ConstPoPs;
typedef       struct PoPsClass *const ConstHandle2PoPs;
// +++ Set
extern_c void
PoPsStylesSet(ConstHandle2PoPs self, ConstHandle2ConstStyles styles);
// -----------------------------------------------------------------------------
// Child: unorthodoxes
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
PoPsUnorthodoxesHas(ConstHandle2ConstPoPs self);
// --- Get, const
extern_c Handle2ConstUnorthodoxes
PoPsUnorthodoxesGetConst(ConstHandle2ConstPoPs self);
// +++ Get
extern_c Handle2Unorthodoxes
PoPsUnorthodoxesGet(ConstHandle2PoPs self);
// +++ Set
extern_c void
PoPsUnorthodoxesSet(ConstHandle2PoPs self, ConstHandle2ConstUnorthodoxes unorthodoxes);
// -----------------------------------------------------------------------------
// Child: gaugeBosons
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
PoPsGaugeBosonsHas(ConstHandle2ConstPoPs self);
// --- Get, const
extern_c Handle2ConstGaugeBosons
PoPsGaugeBosonsGetConst(ConstHandle2ConstPoPs self);
// +++ Get
extern_c Handle2GaugeBosons
PoPsGaugeBosonsGet(ConstHandle2PoPs self);
// +++ Set
extern_c void
PoPsGaugeBosonsSet(ConstHandle2PoPs self, ConstHandle2ConstGaugeBosons gaugeBosons);
// -----------------------------------------------------------------------------
// Child: leptons
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
PoPsLeptonsHas(ConstHandle2ConstPoPs self);
// --- Get, const
extern_c Handle2ConstLeptons
PoPsLeptonsGetConst(ConstHandle2ConstPoPs self);
// +++ Get
extern_c Handle2Leptons
PoPsLeptonsGet(ConstHandle2PoPs self);
// +++ Set
extern_c void
PoPsLeptonsSet(ConstHandle2PoPs self, ConstHandle2ConstLeptons leptons);