versions/GNDS-v2.0/GNDS/fortran/src/v2.0/top/PoPs.f03


!! Set
subroutine PoPsStylesSet(handle, fieldHandle) &
      bind(C, name='PoPsStylesSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine PoPsStylesSet


!! -----------------------------------------------------------------------------
!! Child: unorthodoxes
!! -----------------------------------------------------------------------------

!! Has
function PoPsUnorthodoxesHas(handle) &
      bind(C, name='PoPsUnorthodoxesHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: PoPsUnorthodoxesHas
end function PoPsUnorthodoxesHas

!! Get, const
function PoPsUnorthodoxesGetConst(handle) &
      bind(C, name='PoPsUnorthodoxesGetConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: PoPsUnorthodoxesGetConst
end function PoPsUnorthodoxesGetConst

!! Get
function PoPsUnorthodoxesGet(handle) &
      bind(C, name='PoPsUnorthodoxesGet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr) :: PoPsUnorthodoxesGet
end function PoPsUnorthodoxesGet

!! Set
subroutine PoPsUnorthodoxesSet(handle, fieldHandle) &
      bind(C, name='PoPsUnorthodoxesSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine PoPsUnorthodoxesSet


!! -----------------------------------------------------------------------------
!! Child: gaugeBosons
!! -----------------------------------------------------------------------------

!! Has
function PoPsGaugeBosonsHas(handle) &
      bind(C, name='PoPsGaugeBosonsHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: PoPsGaugeBosonsHas
end function PoPsGaugeBosonsHas

!! Get, const
function PoPsGaugeBosonsGetConst(handle) &
      bind(C, name='PoPsGaugeBosonsGetConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: PoPsGaugeBosonsGetConst
end function PoPsGaugeBosonsGetConst

!! Get
function PoPsGaugeBosonsGet(handle) &
      bind(C, name='PoPsGaugeBosonsGet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr) :: PoPsGaugeBosonsGet
end function PoPsGaugeBosonsGet

!! Set
subroutine PoPsGaugeBosonsSet(handle, fieldHandle) &
      bind(C, name='PoPsGaugeBosonsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine PoPsGaugeBosonsSet


!! -----------------------------------------------------------------------------
!! Child: leptons
!! -----------------------------------------------------------------------------

!! Has
function PoPsLeptonsHas(handle) &
      bind(C, name='PoPsLeptonsHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: PoPsLeptonsHas
end function PoPsLeptonsHas

!! Get, const
function PoPsLeptonsGetConst(handle) &
      bind(C, name='PoPsLeptonsGetConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: PoPsLeptonsGetConst
end function PoPsLeptonsGetConst

!! Get
function PoPsLeptonsGet(handle) &
      bind(C, name='PoPsLeptonsGet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr) :: PoPsLeptonsGet
end function PoPsLeptonsGet

!! Set
subroutine PoPsLeptonsSet(handle, fieldHandle) &
      bind(C, name='PoPsLeptonsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine PoPsLeptonsSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module topPoPs
